feat(debts): support cross-currency debt operations
